# random-person-api

./: .gitignore  README.md  enviar_email.py  gerador.py  main.py  pyproject.toml  requirements.txt
static/css/: main.css  style.css
static/scripts/: error.js  script.js
templates/: base.html  error.html  index.html  send.html
