[tool.poetry]
name = "random-person-api"
version = "0.0.1"
description = ""
authors = ["Los-had"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
